tests/base/parser/bad/cmodule-field-id-colon-tid-with.scilla
scilla_version 0

contract Test
()

(* '=' not ':=' *)
field truth : (Bool) := False
